--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,3 +1,7 @@
 * {
-  font-family: "Courier New", monospace;
+    font-family: "Courier New", monospace;
+}
+
+p {
+    margin-bottom: 1em;
 }
